deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-ops-api-cw
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-ops-api-cw
  template:
    metadata:
      labels:
        app: dev-ops-api-cw
    spec:
      containers:
      - name: dev-ops
        image: abdelsalam86/dev-ops:latest
        ports:
          - containerPort: 3500
        livenessProbe:
          httpGet:
            path: /api/v1
            port: 3500
          initialDelaySeconds: 5
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/v1
            port: 3500
          initialDelaySeconds: 5
          periodSeconds: 20
      imagePullSecrets:
      - name: registry-juffalow
