service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-ops-api-cw-cluster-ip
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3500
  - name: https
    port: 443
    protocol: TCP
    targetPort: 3500
  selector:
    app: dev-ops-api-cw-deployment
  type: ClusterIP
