ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ops-api-cw-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: dev-ops-api-cw-letsencrypt-dev
spec:
  tls:
  - hosts:
    - node-example.juffalow.com
    secretName: dev-ops-api-cw-tls
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-ops-api-cw-cluster-ip
            port: 
              number: 80
